--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -52,7 +53,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="gqa-LR-la4">
-                                <rect key="frame" x="23.5" y="329" width="328.5" height="315"/>
+                                <rect key="frame" x="23" y="329" width="329" height="315"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bH1-xd-Sbn">
                                         <rect key="frame" x="145.5" y="0.0" width="38" height="157.5"/>
@@ -61,13 +62,19 @@
                                             <action selector="loginButtonPressed:" destination="hmS-Pf-eTw" eventType="touchUpInside" id="nKA-98-7Rr"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqq-zs-1SN">
-                                        <rect key="frame" x="143.5" y="157.5" width="42" height="157.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqq-zs-1SN">
+                                        <rect key="frame" x="0.0" y="157.5" width="329" height="157.5"/>
+                                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailingMargin" secondItem="oqq-zs-1SN" secondAttribute="trailing" id="IGM-Pp-cDH"/>
+                                    <constraint firstItem="oqq-zs-1SN" firstAttribute="leading" secondItem="gqa-LR-la4" secondAttribute="leadingMargin" id="Knk-nu-xSk"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -94,36 +101,57 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zgd-AO-mu2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1076" y="1018.7406296851575"/>
+            <point key="canvasLocation" x="-1580" y="1003"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="0LZ-Sd-yN6">
+            <objects>
+                <navigationController id="Zx8-oS-K14" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Map" id="Zat-IT-hgj"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="flL-AQ-zz5">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="kES-hc-7aV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wz4-9l-Uoe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-655" y="1003"/>
         </scene>
         <!--Map-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MapViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="kCg-lH-GWp">
-                                <rect key="frame" x="16" y="25" width="343" height="588"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="343" id="6GF-u1-gvP"/>
-                                    <constraint firstAttribute="height" constant="588" id="stK-pR-LzX"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="kCg-lH-GWp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="305-Yv-EPQ"/>
-                            <constraint firstItem="kCg-lH-GWp" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="50y-xD-XqX"/>
+                            <constraint firstItem="kCg-lH-GWp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Aqt-Ru-ejX"/>
+                            <constraint firstItem="kCg-lH-GWp" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="SaV-mn-a74"/>
+                            <constraint firstItem="kCg-lH-GWp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dS8-rA-ATe"/>
+                            <constraint firstItem="kCg-lH-GWp" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ruy-BB-wug"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" id="d15-uU-6Lb"/>
+                    <navigationItem key="navigationItem" id="CjA-9B-s4I">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="NNp-kb-blg"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="kCg-lH-GWp" id="p0B-OW-cP7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="45.600000000000001" y="1002.5487256371815"/>
+            <point key="canvasLocation" x="229.59999999999999" y="1002.5487256371815"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="cHz-3N-o72">
@@ -148,7 +176,9 @@
                             <outlet property="delegate" destination="utP-P2-LXj" id="ISO-9U-BXc"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="jx7-vJ-Et1"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="jx7-vJ-Et1">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="zXw-wz-DCS"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4yc-eg-olN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -171,18 +201,19 @@
             </objects>
             <point key="canvasLocation" x="-137" y="161"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--LocationsTabBarController-->
         <scene sceneID="pov-VE-Ypt">
             <objects>
-                <tabBarController id="zKG-II-gZM" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="LocationsTabBarController" title="LocationsTabBarController" id="zKG-II-gZM" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="QeC-Ij-9Ub"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ogg-Gl-rvZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="q7S-yW-bWM"/>
-                        <segue destination="kdd-bp-XCR" kind="relationship" relationship="viewControllers" id="js4-ai-egB"/>
+                        <segue destination="Zx8-oS-K14" kind="relationship" relationship="viewControllers" id="kfR-Dm-ZRb"/>
+                        <segue destination="kdd-bp-XCR" kind="relationship" relationship="viewControllers" id="itd-5e-Jhb"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jmh-74-evN" userLabel="First Responder" sceneMemberID="firstResponder"/>
