--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zKG-II-gZM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zKG-II-gZM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <deployment version="4608" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -148,6 +148,18 @@
                                 <action selector="logout:" destination="BYZ-38-t0r" id="zx6-4R-FpN"/>
                             </connections>
                         </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="ZAO-Z3-1s2">
+                                <connections>
+                                    <action selector="addNewLocation:" destination="BYZ-38-t0r" id="KrX-IN-8Jk"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="refresh" id="QmN-UF-FPb">
+                                <connections>
+                                    <action selector="refreshData:" destination="BYZ-38-t0r" id="v0d-dX-rYl"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="kCg-lH-GWp" id="p0B-OW-cP7"/>
@@ -157,7 +169,7 @@
             </objects>
             <point key="canvasLocation" x="229.59999999999999" y="1002.5487256371815"/>
         </scene>
-        <!--Students Informations-->
+        <!--On The Map-->
         <scene sceneID="cHz-3N-o72">
             <objects>
                 <tableViewController id="utP-P2-LXj" customClass="LocationsTableViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
@@ -196,13 +208,29 @@
                             <outlet property="delegate" destination="utP-P2-LXj" id="ISO-9U-BXc"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Students Informations" id="jx7-vJ-Et1">
+                    <navigationItem key="navigationItem" title="On The Map" id="jx7-vJ-Et1">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="zXw-wz-DCS">
                             <connections>
                                 <action selector="logout:" destination="utP-P2-LXj" id="Fvb-eB-fSb"/>
                             </connections>
                         </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="70c-tT-n1j">
+                                <connections>
+                                    <action selector="addNewLocation:" destination="utP-P2-LXj" id="P2Q-vt-ApL"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="refresh" id="JIY-L7-4JD">
+                                <connections>
+                                    <action selector="refreshData:" destination="utP-P2-LXj" id="7Wm-HM-A0p"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="locationTableView" destination="pEL-3L-qf8" id="Xa3-2e-LiV"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4yc-eg-olN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -229,7 +257,6 @@
         <scene sceneID="pov-VE-Ypt">
             <objects>
                 <tabBarController storyboardIdentifier="LocationsTabBarController" title="LocationsTabBarController" id="zKG-II-gZM" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="QeC-Ij-9Ub"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ogg-Gl-rvZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
