--- a/OnTheMap/Base.lproj/Main.storyboard
+++ b/OnTheMap/Base.lproj/Main.storyboard
@@ -228,6 +228,45 @@
             </objects>
             <point key="canvasLocation" x="3095.625" y="569.36619718309862"/>
         </scene>
+        <!--New Location Map View Controller-->
+        <scene sceneID="PnL-Ji-JFS">
+            <objects>
+                <viewController storyboardIdentifier="NewLocationMap" id="ZpD-jB-9To" customClass="NewLocationMapViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4Fi-oc-Ke1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="dmd-Dq-nGH">
+                                <rect key="frame" x="16" y="20" width="288" height="490"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ih6-MN-bs5">
+                                <rect key="frame" x="123" y="518" width="49" height="30"/>
+                                <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="submitNewLocation:" destination="ZpD-jB-9To" eventType="touchUpInside" id="YZI-hQ-5PY"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dmd-Dq-nGH" firstAttribute="top" secondItem="eHg-mm-mqc" secondAttribute="top" id="6cL-UU-1Ec"/>
+                            <constraint firstItem="ih6-MN-bs5" firstAttribute="leading" secondItem="eHg-mm-mqc" secondAttribute="leading" constant="123" id="Cye-F7-1ZJ"/>
+                            <constraint firstItem="eHg-mm-mqc" firstAttribute="trailing" secondItem="ih6-MN-bs5" secondAttribute="trailing" constant="148" id="cj1-Zk-4rL"/>
+                            <constraint firstItem="dmd-Dq-nGH" firstAttribute="leading" secondItem="eHg-mm-mqc" secondAttribute="leading" constant="16" id="i8s-7C-5x8"/>
+                            <constraint firstItem="eHg-mm-mqc" firstAttribute="trailing" secondItem="dmd-Dq-nGH" secondAttribute="trailing" constant="16" id="lxN-7D-fWm"/>
+                            <constraint firstItem="eHg-mm-mqc" firstAttribute="bottom" secondItem="ih6-MN-bs5" secondAttribute="bottom" constant="20" id="n8j-7d-Ecb"/>
+                            <constraint firstItem="ih6-MN-bs5" firstAttribute="top" secondItem="dmd-Dq-nGH" secondAttribute="bottom" constant="8" id="tke-By-Fzh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eHg-mm-mqc"/>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="dmd-Dq-nGH" id="caf-Lh-MJn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tQQ-Ie-bpM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4117.5" y="568.30985915492954"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="lYV-KG-x69">
             <objects>
